# PokeJect-V2

./: CMakeLists.txt  README.md  Updates.txt
include/: Arbok.h  Charmender.h  Cubone.h  FireMon.h  GrassMon.h  GroundMon.h  Moves.h  Oddish.h  PoisonMon.h  Pokemon.h  Team.h  json.hppZone.Identifier
resources/: filetest.cpp  pokedex.json
src/: Arbok.cpp  Arbok.h  Charmender.cpp  Charmender.h  Cubone.cpp  Cubone.h  FireMon.cpp  FireMon.h  GrassMon.cpp  GrassMon.h  GroundMon.cpp  GroundMon.h  Moves.cpp  Oddish.cpp  Oddish.h  PoisonMon.cpp  PoisonMon.h  Pokemon.cpp  Pokemon.h  Team.cpp  gnd  main.cpp
